# heat_equation

./: .gitignore  CMakeLists.txt  README.md  animate_oti_demo.py  heat_solver.hpp  main.cpp  oti_heat_analysis.cpp  plot_oti_analysis.py  vtk_utils.hpp
benchmarks/: oti_kernel_microbench.cpp  parse_kernel_profile.py  plot_benchmark.py  plot_layout_comparison.py  profile_kernels.sh  run_benchmark.sh
benchmarks/results/: benchmark_median.csv  benchmark_results.csv  benchmark_results_gpu_aos.csv  benchmark_results_gpu_soa.csv  kernel_profile.csv
